oppen hours section

--- a/om-oss.html
+++ b/om-oss.html
@@ -84,7 +84,22 @@
             måltid på [Restaurangens namn]!
         </div>
 
-        
+
+
+
+    </section>
+    <div class="vertical-line"></div>
+    <section class="oppetider-section">
+        <div class="oppet">
+            <h2>Öppetider</h2>
+        </div>
+
+
+
+
+
+
+
 
 
     </section>
@@ -102,7 +117,7 @@
     </footer>
     <script src="script.js"></script>
 
-    
+
 </body>
 
 </html>
